<resources>
    <string name="app_name">Alarmas</string>
    <string name="firstBackgroundDescription">A photo of the hand of a driver taken from the back seat</string>
    <string name="mapBackgroundDescription">A map of a city with a highlighted point</string>
    <string name="phoneLabel">Regístrate con tu número de celular: </string>
    <string name="smsLabel">Mensaje de texto de confirmación: </string>
    <string name="helloFirstScreen">Hola!</string>
    <string name="helloSecondScreen">Enfócate!</string>
    <string name="helloThirdScreen">Bienvenido!</string>
    <string name="speakerIcon">An icon of a speaker, indicating that an audio is being reproduced</string>
    <string name="checkIcon">An icon with a checkmark, indicating a successful process</string>
    <string name="micIcon">An icon of a microphone, indicating that no audio is being recorded at this moment</string>
    <string name="micIconRecording">An icon of a microphone, indicating that an audio is being recorded at this moment</string>
    <string name="continueButton">Continuar</string>
    <string name="number_placeholder">(XXX) XXX-XXXX</string>
    <string name="number_placeholder_fill">(300) 313–1389</string>
    <string name="sms_placeholder">X X X X</string>
    <string name="sms_placeholder_fill">6 3 2 8</string>
    <string name="rainBackground">A decorative background that simulates rain</string>
    <string name="linesBackground">A decorative background with lines of multiple stroke width, fading down vertically</string>
    <string name="firstRecord">Grabemos tu primera alarma!</string>
    <string name="recording">Grabando…</string>
    <string name="confirmation">Confirmando…</string>
    <string name="seeAlarms">Ver tus alarmas</string>
    <string name="alarmsTitle">Tus alarmas</string>
    <string name="recordingConfirmation">Tu alarma fue grabada correctamente, debes recoger a Luis Miguel en Lucca a las 9pm</string>
    <string name="nameItem1">Luis Miguel</string>
    <string name="locationItem1">Conjunto Lucca</string>
    <string name="hourItem1">9pm</string>
    <string name="nameItem2">Diego</string>
    <string name="locationItem2">Bucaramanga</string>
    <string name="hourItem2">3pm</string>
    <string name="nameItem3">Camilo</string>
    <string name="locationItem3">Sienna</string>
    <string name="hourItem3">1am</string>
    <string name="nameItem4">Ramiro</string>
    <string name="locationItem4">Firenze</string>
    <string name="hourItem4">1pm</string>
</resources>