<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    tools:context=".Overview">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/rainBackground"
        android:src="@drawable/rain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:paddingVertical="30dp"
        android:weightSum="100"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/constraintLayoutAudio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/checkIcon"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/checkIcon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_check_circle_outline_24" />

        <ImageView
            android:id="@+id/firstScreenBackground"
            android:layout_width="match_parent"
            android:layout_weight="65"
            android:layout_height="0dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/mapBackgroundDescription"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/map" />

        <TextView
            android:layout_weight="20"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/khula"
            android:textAlignment="center"
            android:id="@+id/confirmationMessage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/recordingConfirmation" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutAudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <Button
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/app_blue"
            android:text="@string/seeAlarms"
            android:textAlignment="center" />
        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/speakerIcon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_volume_up_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>